--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -11,9 +11,11 @@
   <% end %>
 </p>
 <p><%= @article.body %></p>
-<%= link_to 'edit', edit_article_path(@article) %>
-<%= link_to 'delete', article_path(@article), method: :delete, 
-  data: {confirm: 'Are you sure?'} %>
+<% if logged_in? %>
+  <%= link_to 'edit', edit_article_path(@article) %>
+  <%= link_to 'delete', article_path(@article), method: :delete, 
+    data: {confirm: 'Are you sure?'} %>
+<% end %>
 <%= render partial: 'comments/form' %>
 <%= link_to '<< Back to Articles List', articles_path %>
 
